--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.2",
   "description": "TypeScript-first incremental/clicker engine library. Framework-agnostic, deterministic, and production-ready for building idle/clicker games.",
   "license": "MIT",
-  "author": "Clicker Game Engine Contributors",
+  "author": "Idle Clicker Engine Contributors",
   "repository": {
     "type": "git",
     "url": "git@github.com:blixxurd/clicker-engine.git"
